--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "license": "GPL-2.0",    
     "minimum-stability": "dev",   
     "require": {
+		"ezsystems/ezpublish-legacy-installer": "*",
         "opencontent/openpa-ls": ">=1.0"
     },
     "extra": {
